# solver_MHD

./: CMakeLists.txt  branch10.f90  branch10_4.f90  branch10_5_update.f90  input.txt
source/: CMakeLists.txt  array_processes.f90  build_linear_system.f90  green_function_sub.f90  grid_generate.f90  linear_solvers.f90  main_DH_BEM.f90  main_DH_pseudo_vac.f90  main_test.f90  matrix_vector_op.f90  read_input.f90  symbolic_LU_op.f90
